force-app/main/default/objects/Dynamo_eBike_Order__x/Dynamo_eBike_Order__x.object-meta.xml
<CustomObject>
    <externalDataSource>MB_eBikes_EDS</externalDataSource>
    <externalName>Orders</externalName>
    <label>eBike DynamoDB Order</label>
    <pluralLabel>eBike DynamoDB Orders</pluralLabel>
</CustomObject>