force-app/main/default/objects/Dynamo_eBike_Order__x/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <externalDeveloperName>Account</externalDeveloperName>
    <label>Account</label>
    <length>50</length>
    <type>Text</type>
</CustomField>