force-app/main/default/objects/Dynamo_eBike_Order__x/fields/AccountLookup__c.field-meta.xml
<CustomField>
    <fullName>AccountLookup__c</fullName>
    <externalDeveloperName>Account</externalDeveloperName>
    <label>AccountLookup</label>
    <length>30</length>
    <referenceTargetField>Account.ebikesaws__ExtAccountId__c</referenceTargetField>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dynamo eBike Orders</relationshipLabel>
    <relationshipName>Dynamo_eBike_Orders</relationshipName>
    <type>IndirectLookup</type>
</CustomField>