force-app/main/default/objects/Dynamo_eBike_Order__x/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <externalDeveloperName>Name</externalDeveloperName>
    <label>Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>