force-app/main/default/objects/Dynamo_eBike_Order__x/fields/OrderDateTime__c.field-meta.xml
<CustomField>
    <fullName>OrderDateTime__c</fullName>
    <externalDeveloperName>OrderDateTime</externalDeveloperName>
    <label>OrderDateTime</label>
    <length>30</length>
    <type>Text</type>
</CustomField>