force-app/main/default/objects/Dynamo_eBike_Order__x/fields/OrderStatus__c.field-meta.xml
<CustomField>
    <fullName>OrderStatus__c</fullName>
    <externalDeveloperName>OrderStatus</externalDeveloperName>
    <label>OrderStatus</label>
    <length>20</length>
    <type>Text</type>
</CustomField>