force-app/main/default/objects/Dynamo_eBike_Order__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ExternalId</columns>
    <columns>Account__c</columns>
    <columns>Amount__c</columns>
    <columns>Model__c</columns>
    <columns>OrderDateTime__c</columns>
    <columns>OrderStatus__c</columns>
    <columns>Quantity__c</columns>
    <columns>Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>